--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
         </div>
 
         <h2 id="kontakt">Kontakt</h2>
-        <p>Maila oss på <strong>kontakt@soundwave.se</strong>.</p>
+        <p>Maila oss på <strong>m a n s @ l j u d n a p p a . s e</strong>.</p>
     </div>
 
     <footer>
