Add versioning to styles.css link in index.html

--- a/index.html
+++ b/index.html
@@ -87,6 +87,9 @@
             border-top: 2px solid #444;
         }
     </style>
+
+<link rel="stylesheet" href="styles.css?v=12345">
+    
 </head>
 
 <body>
