--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ljudnappa</title>
 
-    <!-- Extern CSS -->
     <link rel="stylesheet" href="styles.css?v=1">
 </head>
 
@@ -13,51 +12,46 @@
     <header>
         <h1>Ljudnappa</h1>
         <nav>
-            <a href="#tjanster">Tjänster</a>
+            <a href="#media">Media</a>
             <a href="#kontakt">Kontakt</a>
         </nav>
     </header>
 
-    <div class="hero">
-        <h2>Professionellt ljud för film, TV och digitala produktioner</h2>
-    </div>
-
     <div class="content">
-        <h2 id="tjanster">Våra tjänster</h2>
+        <h2 id="media">Lyssna på våra ljudproduktioner</h2>
 
-        <div class="service">
-            <h3>Ljudmix & Sound Design</h3>
-            <p>Vi skapar ljudbilder som förstärker känslor och berättelser.</p>
+        <!-- MEDIA SLOT 1 -->
+        <div class="media-slot">
+            <h3>Titel 1</h3>
+            <!-- Fyll i ljudspelare eller text här senare -->
+            <p><em>Här kan du lägga in ljud, exempelvis en speak, atmosfär eller ljuddesign.</em></p>
         </div>
 
-        <div class="service">
-            <h3>Fältinspelning</h3>
-            <p>Högkvalitativ inspelning av dialog, atmosfärer och effekter.</p>
+        <!-- MEDIA SLOT 2 -->
+        <div class="media-slot">
+            <h3>Titel 2</h3>
+            <p><em>Plats för ännu ett ljudklipp eller projekt.</em></p>
         </div>
 
-        <div class="service">
-            <h3>Postproduktion</h3>
-            <p>Rensning, restaurering, mastering och leverans enligt EBU R128.</p>
+        <!-- MEDIA SLOT 3 -->
+        <div class="media-slot">
+            <h3>Titel 3</h3>
+            <p><em>Fler ljudproduktioner kan läggas här.</em></p>
+        </div>
+
+        <!-- MEDIA SLOT 4 -->
+        <div class="media-slot">
+            <h3>Titel 4</h3>
+            <p><em>Fyll på med vilket ljudmaterial du vill.</em></p>
         </div>
 
         <h2 id="kontakt">Kontakt</h2>
-        <p>Maila oss på <strong>m a n s @ l j u d n a p p a . s e</strong>.</p>
+        <p>Maila oss på <strong>mans@ljudnappa.se</strong>.</p>
     </div>
 
     <footer>
         © 2025 Ljudnappa – All Rights Reserved
     </footer>
 
-    <script>
-        // Enkel scroll-effekt för header
-        window.addEventListener("scroll", () => {
-            const header = document.querySelector("header");
-            if (window.scrollY > 50) {
-                header.style.background = "#111";
-            } else {
-                header.style.background = "#000";
-            }
-        });
-    </script>
 </body>
 </html>
