--- a/index.html
+++ b/index.html
@@ -24,25 +24,25 @@
         <div class="media-slot">
             <h3>Titel 1</h3>
             <!-- Fyll i ljudspelare eller text här senare -->
-            <p><em>Här kan du lägga in ljud, exempelvis en speak, atmosfär eller ljuddesign.</em></p>
+            <p><em>TBA</em></p>
         </div>
 
         <!-- MEDIA SLOT 2 -->
         <div class="media-slot">
             <h3>Titel 2</h3>
-            <p><em>Plats för ännu ett ljudklipp eller projekt.</em></p>
+            <p><em>TBA</em></p>
         </div>
 
         <!-- MEDIA SLOT 3 -->
         <div class="media-slot">
             <h3>Titel 3</h3>
-            <p><em>Fler ljudproduktioner kan läggas här.</em></p>
+            <p><em>TBA</em></p>
         </div>
 
         <!-- MEDIA SLOT 4 -->
         <div class="media-slot">
             <h3>Titel 4</h3>
-            <p><em>Fyll på med vilket ljudmaterial du vill.</em></p>
+            <p><em>TBA</em></p>
         </div>
 
         <h2 id="kontakt">Kontakt</h2>
