--- a/index.html
+++ b/index.html
@@ -22,26 +22,26 @@
 
         <!-- MEDIA SLOT 1 -->
         <div class="media-slot">
-            <h3>Titel 1</h3>
+            <h3>TBA 1</h3>
             <!-- Fyll i ljudspelare eller text här senare -->
             <p><em>TBA</em></p>
         </div>
 
         <!-- MEDIA SLOT 2 -->
         <div class="media-slot">
-            <h3>Titel 2</h3>
+            <h3>TBA 2</h3>
             <p><em>TBA</em></p>
         </div>
 
         <!-- MEDIA SLOT 3 -->
         <div class="media-slot">
-            <h3>Titel 3</h3>
+            <h3>TBA 3</h3>
             <p><em>TBA</em></p>
         </div>
 
         <!-- MEDIA SLOT 4 -->
         <div class="media-slot">
-            <h3>Titel 4</h3>
+            <h3>TBA 4</h3>
             <p><em>TBA</em></p>
         </div>
 
