--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <article class="card">
           <div class="thumb" aria-hidden></div>
           <div>
-            <h3>Boule <span style="color:var(--muted); font-weight:400">— Single, 2025</span></h3>
+            <h3>Låttitel <span style="color:var(--muted); font-weight:400">— Single, 2025</span></h3>
             <div class="meta">Musiker, artist, produktion, låtskrivande, mix</div>
             <p class="excerpt">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vitae eros eget tellus tristique bibendum.</p>
             <!-- MEDIA PLAYER PLACEHOLDER -->
@@ -77,7 +77,7 @@
         <article class="card">
           <div class="thumb" aria-hidden></div>
           <div>
-            <h3>Härifrån <span style="color:var(--muted); font-weight:400">— Album, 2025</span></h3>
+            <h3>Låttitel <span style="color:var(--muted); font-weight:400">— Album, 2025</span></h3>
             <div class="meta">Production, musician &amp; mix</div>
             <p class="excerpt">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio praesent libero.</p>
             <div class="player" aria-label="Media player placeholder">MEDIA PLAYER (lämnad tom)</div>
@@ -88,7 +88,7 @@
         <article class="card">
           <div class="thumb" aria-hidden></div>
           <div>
-            <h3>Mera mer av <span style="color:var(--muted); font-weight:400">— Single, 2025</span></h3>
+            <h3>Låttitel <span style="color:var(--muted); font-weight:400">— Single, 2025</span></h3>
             <div class="meta">Artist, produktion, mix</div>
             <p class="excerpt">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore.</p>
             <div class="player" aria-label="Media player placeholder">MEDIA PLAYER (lämnad tom)</div>
@@ -99,7 +99,7 @@
         <article class="card">
           <div class="thumb" aria-hidden></div>
           <div>
-            <h3>Last Night The First Night <span style="color:var(--muted); font-weight:400">— EP, 2024</span></h3>
+            <h3>Låttitel <span style="color:var(--muted); font-weight:400">— EP, 2024</span></h3>
             <div class="meta">Artist, produktion, mix</div>
             <p class="excerpt">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas tempus, tellus eget.</p>
             <div class="player" aria-label="Media player placeholder">MEDIA PLAYER (lämnad tom)</div>
